# sportscli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
sportscli/: cli.py  config.py
sportscli/core/: display.py  exceptions.py  http.py
sportscli/sports/chess/: app.py  client.py  display.py
sportscli/sports/cricket/: app.py  client.py  display.py
sportscli/sports/f1/: app.py  client.py  display.py
sportscli/sports/fav/: app.py  display.py
sportscli/sports/football/: app.py  client.py  display.py
tests/: test_cli.py  test_config.py
tests/core/: test_exceptions.py  test_http.py
tests/sports/chess/: test_app.py  test_client.py
tests/sports/cricket/: test_app.py  test_client.py
tests/sports/f1/: test_app.py  test_client.py
tests/sports/fav/: test_app.py
tests/sports/football/: test_app.py  test_client.py
